--- a/.env
+++ b/.env
@@ -5,3 +5,7 @@ POSTGRES_DB=taskdb
 POSTGRES_USER=javaguru
 POSTGRES_PASSWORD=chocolatefrog
 POSTGRES_PORT=5436
+JWT_SECRET_PHRASE=$2y$10$UQ2zBJlzw9IUW3wDqmrHpx5EvqIJkOiKWc35jzz9lKe2dFXEDRO
+CORS_ALLOWED_ORIGINS=none
+CORS_ALLOWED_METHODS=none
+APPLICATION_PORT=8080
