--- a/pom.xml
+++ b/pom.xml
@@ -9,17 +9,16 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
+        <java.version>17</java.version>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <org.projectlombok>1.18.24</org.projectlombok>
         <org.mapstruct.version>1.5.3.Final</org.mapstruct.version>
         <spring.boot.dependencies.version>3.3.3</spring.boot.dependencies.version>
         <springdoc-openapi-starter-webmvc-ui.version>2.0.2</springdoc-openapi-starter-webmvc-ui.version>
-        <maven-failsafe-plugin.version>3.1.2</maven-failsafe-plugin.version>
-        <spring.boot.maven.plugin.version>3.0.1</spring.boot.maven.plugin.version>
-        <spring.boot.maven.compiler.plugin.version>3.10.1</spring.boot.maven.compiler.plugin.version>
-        <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
-        <integration.tests.template>**/*IntegrationTest.java</integration.tests.template>
+        <spring.boot.maven.plugin.version>3.4.0</spring.boot.maven.plugin.version>
+        <spring.boot.maven.compiler.plugin.version>3.13.0</spring.boot.maven.compiler.plugin.version>
     </properties>
 
     <dependencyManagement>
@@ -84,6 +83,12 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <version>3.3.5</version>
             <scope>test</scope>
@@ -104,7 +109,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>${spring.boot.maven.plugin.version}</version>
                 <configuration>
-                    <mainClass>ru.t1.test.Main</mainClass>
+                    <mainClass>ru.gogolin.task.TaskManagementApplication</mainClass>
                 </configuration>
                 <executions>
                     <execution>
@@ -117,11 +122,22 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
+                <version>${spring.boot.maven.compiler.plugin.version}</version>
                 <configuration>
-                    <compilerArgs>
-                        <arg>-parameters</arg>
-                    </compilerArgs>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                    <annotationProcessorPaths>
+                        <path>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                            <version>${org.projectlombok}</version>
+                        </path>
+                        <path>
+                            <groupId>org.mapstruct</groupId>
+                            <artifactId>mapstruct-processor</artifactId>
+                            <version>${org.mapstruct.version}</version>
+                        </path>
+                    </annotationProcessorPaths>
                 </configuration>
             </plugin>
         </plugins>
