--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 DATABASE_URL=jdbc:postgresql://localhost:5436/taskdb
-DATABASE_PASSWORD=chocolatefrog
-DATABASE_USERNAME=javaguru
+DATABASE_PASSWORD=
+DATABASE_USERNAME=
 POSTGRES_DB=taskdb
-POSTGRES_USER=javaguru
-POSTGRES_PASSWORD=chocolatefrog
-POSTGRES_PORT=5436
-JWT_SECRET_PHRASE=$2y$10$UQ2zBJlzw9IUW3wDqmrHpx5EvqIJkOiKWc35jzz9lKe2dFXEDRO
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_PORT=
+JWT_SECRET_PHRASE=
 CORS_ALLOWED_ORIGINS=none
 CORS_ALLOWED_METHODS=none
-APPLICATION_PORT=8080
+APPLICATION_PORT=
