--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,9 @@ services:
 
   app:
     build: .
-    image: task-management-system-1.0.0
+    #image: task-management-system-1.0.0
     restart: always
     container_name: task-management-system-container
-    env_file:
-      - .env
     environment:
       DATABASE_URL: ${DATABASE_URL}
       DATABASE_PASSWORD: ${DATABASE_PASSWORD}
@@ -15,9 +13,7 @@ services:
       CORS_ALLOWED_ORIGINS: ${CORS_ALLOWED_ORIGINS}
       CORS_ALLOWED_METHODS: ${CORS_ALLOWED_METHODS}
     ports:
-      - "${APPLICATION_PORT}:8080"
-    volumes:
-      - ./var/our_image_storage:/var/our_image_storage
+      - "8081:8080"
     depends_on:
       - tasks-db
 
@@ -25,17 +21,14 @@ services:
   tasks-db:
     image: postgres:14
     restart: always
-    container_name: tasks-system-db
-    env_file:
-      - .env
     ports:
-      - "${POSTGRES_PORT}:5432"
+      - "5432:5432"
     environment:
       POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     volumes:
-      - tasks-system-db-volume:/var/lib/postgresql/data
+      - ./tasks-system-db-volume:/var/lib/postgresql/data
 
 
 volumes:
