--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
-DATABASE_URL=jdbc:postgresql://localhost:5436/taskdb
-DATABASE_PASSWORD=
-DATABASE_USERNAME=
+DATABASE_URL=jdbc:postgresql://tasks-db:5432/taskdb
+DATABASE_PASSWORD=database_password
+DATABASE_USERNAME=database_username
 POSTGRES_DB=taskdb
-POSTGRES_USER=
-POSTGRES_PASSWORD=
-POSTGRES_PORT=
-JWT_SECRET_PHRASE=
+POSTGRES_USER=database_username
+POSTGRES_PASSWORD=database_password
+POSTGRES_PORT=5434
+JWT_SECRET_PHRASE=ldflksjdfsjfsjfosjf;lsjfsodjf;soef;sljdf;sodfj
 CORS_ALLOWED_ORIGINS=none
 CORS_ALLOWED_METHODS=none
-APPLICATION_PORT=
+APPLICATION_PORT=8081
