--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       CORS_ALLOWED_ORIGINS: ${CORS_ALLOWED_ORIGINS}
       CORS_ALLOWED_METHODS: ${CORS_ALLOWED_METHODS}
     ports:
-      - "8081:8080"
+      - "${APPLICATION_PORT}:8080"
     depends_on:
       - tasks-db
 
@@ -21,8 +21,9 @@ services:
   tasks-db:
     image: postgres:14
     restart: always
+    container_name: tasks-db
     ports:
-      - "5432:5432"
+      - "${POSTGRES_PORT}:5432"
     environment:
       POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_USER: ${POSTGRES_USER}
